# ChessCpp

./: .gitignore.txt  CMakeLists.txt  Chess.sln  LICENSE  README.md
Chess/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Chess.vcxproj  Chess.vcxproj.filters  ChessCodes.cpp  ChessCodes.h  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Manager.cpp  Manager.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  Pipe.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  Source.cpp  cpp.hint
